tests/macros/raw_select/plugin.stderr
error: option `plugin` does not exist for kind `raw_select`
 --> $DIR/plugin.rs:2:49
  |
2 |     let q = inquisition::questions![RawSelect { plugin: todo!() }];
  |                                                 ^^^^^^
