tests/macros/raw_select/plugin.rs
fn main() {
    let q = inquisition::questions![RawSelect { plugin: todo!() }];
}
